Fri Sep 23 12:15:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): enable tail call
	  optimization inside a conditional block.

Thu Sep 22 13:00:04 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* gc.c (gc_start_internal): [DOC] methods without arguments
	  like r56194. [Bug #12777]

Wed Sep 21 17:43:53 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (InitVM_process): Support CLOCK_MONOTONIC_RAW_APPROX,
	  CLOCK_UPTIME_RAW, and CLOCK_UPTIME_RAW_APPROX which are introduced
	  by macOS 10.12.

Wed Sep 21 13:47:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (brace_body, do_body): preserve cmdarg_stack so that
	  `do` after cmdarg in a block should be `do_block` and bound to
	  the outer method.  [ruby-core:72482] [Bug #11873]

	* parse.y: `do` after cmdarg in parentheses should be `do_block`
	  and bound to the outer method.  [ruby-core:72482] [Bug #11873]

	* parse.y (brace_body, do_body): extract block bodies.

Tue Sep 20 23:02:50 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_start_internal): [DOC] add ObjectSpace.garbage_collect
	  and fix GC#garbage_collect.  [Bug #12777]

Tue Sep 20 21:24:01 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* doc/extension.ja.rdoc: translate r56189 (rb_gc_adjust_memory_usage).

Tue Sep 20 17:52:28 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: Update rake-11.3.0

Tue Sep 20 16:52:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_adjust_memory_usage): notify memory usage to the GC
	  engine by extension libraries, to trigger GC.  [Feature #12690]

Mon Sep 19 17:05:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (Init_Numeric), bignum.c (Init_Bignum): deprecate
	  Fixnum and Bignum.  this may be reverted after previews.
	  [Feature #12739]

Mon Sep 19 10:36:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (lazy_init_yielder): directly call stored functions.
	  [Feature #6183]
