@@ -1,3 +1,8 @@
+Fri Sep 23 15:47:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/forwardable.rb (_delegator_method): allow private methods to
+	  be delegated, with warnings.  [ruby-core:77341] [Bug #12782]
+
 Fri Sep 23 12:15:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (iseq_peephole_optimize): enable tail call
